--- a/css/pace.css
+++ b/css/pace.css
@@ -12,7 +12,7 @@
 }
 
 .pace .pace-progress {
-    background: #b0bec5;
+    background: #b5c2c8;
     position: absolute;
     z-index: 2000;
     top: 49px;
