Tail problem solved

--- a/fonts/fontface.css
+++ b/fonts/fontface.css
@@ -1,6 +1,14 @@
 @font-face {
-    font-family: 'ChicagoFLF';
+    font-family: 'Brandon Text Medium';
     font-style: normal;
     font-weight: normal;
-    src: local('ChicagoFLF'), url('ChicagoFLF.ttf') format('TrueType');
+    src: local('Brandon Text Medium'), url('BrandonText-Medium.woff') format('woff');
+}
+
+
+@font-face {
+    font-family: 'Brandon Text Medium Italic';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Brandon Text Medium Italic'), url('BrandonText-MediumItalic.woff') format('woff');
 }
